# trs

./: .dockerignore  .envrc.template  .gcloudignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  app.json  install.sh  lldb  package.json
.circleci/: config.yml
fixture/: sample
functions/: .gcloudignore  index.js
gcloud/: Dockerfile
oxford-client/docs/: CrossReferencesList.md  DictionaryEntriesApi.md  ExamplesList.md  ExamplesListInner.md  Filters.md  InflectionsList.md  InflectionsListInner.md  Lemmatron.md  LemmatronLexicalEntry.md  PronunciationsList.md  PronunciationsListInner.md  Regions.md  RetrieveEntry.md  SentencesEntry.md  SentencesResults.md  StatsWordResultListResults.md  StatsWordResultResult.md  SynonymsAntonymsInner.md  Thesaurus.md  ThesaurusLexicalEntry.md  TranslationApi.md  TranslationsList.md  UtilityApi.md  UtilityLabels.md  VariantFormsList.md  Wordlist.md  WordlistResults.md
oxford_client/docs/: ArrayOfRelatedEntries.md  ArrayOfRelatedEntriesInner.md  Arrayofstrings.md  CategorizedTextList.md  CategorizedTextListInner.md  CrossReferencesListInner.md  Entry.md  FiltersResults.md  GrammaticalFeaturesList.md  GrammaticalFeaturesListInner.md  HeadwordEntry.md  HeadwordLemmatron.md  HeadwordThesaurus.md  Languages.md  LanguagesResults.md  LanguagesSourceLanguage.md  LanguagesTargetLanguage.md  LemmatronApi.md  LexiStatsApi.md  LexicalEntry.md  NgramsResult.md  NgramsResultResults.md  SearchApi.md  (+14 more)
secret/: Dockerfile
server/: Dockerfile
src/: api.rs  cache.rs  main.rs  oxford.rs  server.rs  translate.rs  utils.rs
