[package]
name = "trs"
version = "0.2.1"
authors = ["shinichi kogai <kogai0121@gmail.com>"]

[dependencies]
reqwest = "0.5.1"
hyper = "0.11"
hyper-tls = "0.1"
futures = "0.1"
tokio-core = "0.1"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
clap = "~2.31.2"
termion = "1.0"
oxford_dictionary_api_rs = { git = "https://github.com/kogai/oxford-dictinary-api-rs" }
# oxford_dictionary_api_rs = { path = "../oxford-dictinary-api-rs" }
